--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,11 +1,13 @@
 ﻿<div class="topnav">
     <a class="navbar-brand" href="/myproperties">Realbnb</a>
     <div class="search-container">
-        <form  action="/upload">
+        <form action="/upload">
             <input type="text" placeholder="Search listings...." name="search">
-            <button class="btn btn-success" href="/upload">Login</button>
-
+            <button class="btn btn-success" href="/upload">Search</button>
         </form>
-
+    </div>
+    <div class="user-logins">
+        <button class="btn btn-success" href="/upload">Manage Properties</button>
+        <button class="btn btn-success"><LoginDisplay /></button>
     </div>
 </div>
