--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,247 +1,106 @@
 ﻿@page "/"
+@inject IBnBService BnBService
+@using RealbnbDev.Models
+@using RealbnbDev.Services
+
+
 <div class="main-columns marginTop">
     <div class="row">
         <div class="left-column">
             <!--Left Column content begins-->
-            <div class="filter-box">
-               
-            </div><!--End of filter box-->
-        </div><!--Left Column content ends-->
 
-        <div class="right-column">
-            <!--Right Column content begins-->
-            <div class="card-deck">
-                <div class="card">
-                    <img class="card-img-top" src="/img/img-1.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <div class="row">
-                            <h5 class="room-category">Entire Place</h5>
-                            <!--Ratings-->
-                            <div class="ratings">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </div>
-                            <!--/Ratings-->
-                        </div>
-                        <h5 class="card-title">Room 1</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="row">
-                            <small class="room-price">$102.40</small>
-                            <div class="heart-rate"><span class="glyphicon glyphicon-heart checked-heart"></span></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src="/img/img-2.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <div class="row">
-                            <h5 class="room-category">Shared Room</h5>
-                            <!--Ratings-->
-                            <div class="ratings">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                            </div>
-                            <!--/Ratings-->
-                        </div>
-                        <h5 class="card-title">Room 2</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="row">
-                            <small class="room-price">$70.4</small>
-                            <div class="heart-rate"><span class="glyphicon glyphicon-heart"></span></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src="/img/img-3.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <div class="row">
-                            <h5 class="room-category">Private Room</h5>
-                            <!--Ratings-->
-                            <div class="ratings">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </div>
-                            <!--/Ratings-->
-                        </div>
-                        <h5 class="card-title">Room 3</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="row">
-                            <small class="room-price">$56.9</small>
-                            <div class="heart-rate"><span class="glyphicon glyphicon-heart"></span></div>
-                        </div>
-                    </div>
-                </div>
-            </div> <!--End of row one-->
-            <div class="card-deck" style="margin-top:20px;">
-                <div class="card">
-                    <img class="card-img-top" src="/img/img-4.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <div class="row">
-                            <h5 class="room-category">Private Room</h5>
-                            <!--Ratings-->
-                            <div class="ratings">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </div>
-                            <!--/Ratings-->
-                        </div>
-                        <h5 class="card-title">Room 4</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="row">
-                            <small class="room-price">$84.1</small>
-                            <div class="heart-rate"><span class="glyphicon glyphicon-heart checked-heart"></span></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src="/img/img-5.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <div class="row">
-                            <h5 class="room-category">Entire Room</h5>
-                            <!--Ratings-->
-                            <div class="ratings">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </div>
-                            <!--/Ratings-->
-                        </div>
-                        <h5 class="card-title">Room 5</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="row">
-                            <small class="room-price">$53</small>
-                            <div class="heart-rate"><span class="glyphicon glyphicon-heart"></span></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src="/img/img-6.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <div class="row">
-                            <h5 class="room-category">Shared Room</h5>
-                            <!--Ratings-->
-                            <div class="ratings">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                            </div>
-                            <!--/Ratings-->
-                        </div>
-                        <h5 class="card-title">Room 6</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="row">
-                            <small class="room-price">$90.6</small>
-                            <div class="heart-rate"><span class="glyphicon glyphicon-heart checked-heart"></span></div>
-                        </div>
-                    </div>
-                </div>
-            </div><!--End of row two-->
-            <div class="card-deck" style="margin-top:20px;">
-                <div class="card">
-                    <img class="card-img-top" src="/img/img-3.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <div class="row">
-                            <h5 class="room-category">Private Room</h5>
-                            <!--Ratings-->
-                            <div class="ratings">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </div>
-                            <!--/Ratings-->
-                        </div>
-                        <h5 class="card-title">Room 4</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="row">
-                            <small class="room-price">$84.1</small>
-                            <div class="heart-rate"><span class="glyphicon glyphicon-heart"></span></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src="/img/img-6.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <div class="row">
-                            <h5 class="room-category">Entire Place</h5>
-                            <!--Ratings-->
-                            <div class="ratings">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </div>
-                            <!--/Ratings-->
-                        </div>
-                        <h5 class="card-title">Room 5</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="row">
-                            <small class="room-price">$53</small>
-                            <div class="heart-rate"><span class="glyphicon glyphicon-heart"></span></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src="/img/img-2.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <div class="row">
-                            <h5 class="room-category">Shared Room</h5>
-                            <!--Ratings-->
-                            <div class="ratings">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </div>
-                            <!--/Ratings-->
-                        </div>
-                        <h5 class="card-title">Room 6</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="row">
-                            <small class="room-price">$90.6</small>
-                            <div class="heart-rate"><span class="glyphicon glyphicon-heart"></span></div>
-                        </div>
-                    </div>
+            <div class="form-row">
+                <div class="form-group col-md-10">
+                    <label for="Category">Filter by Price</label>
+                    <select id="inputState" class="form-control">
+                        <option selected>Choose Price</option>
+                        <option value="Private Room">Below $200</option>
+                        <option value="Hotel Room">Below $150</option>
+                        <option value="Entire Place">Below $100</option>
+                        <option value="Shared Room">Below $50</option>
+                    </select>
                 </div>
             </div>
-            <!--Right Column content ends-->
-        </div>
+            <div class="form-row">
+                <div class="form-group col-md-10">
+                    <label for="Category">Filter by Category</label>
+                    <select id="inputState" class="form-control">
+                        <option selected>Choose Category</option>
+                        <option value="Private Room">Private Room</option>
+                        <option value="Hotel Room">Hotel Room</option>
+                        <option value="Entire Place">Entire Place</option>
+                        <option value="Shared Room">Shared Room</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-10">
+                    <label for="Category">Filter by Location</label>
+                    <select id="inputState" class="form-control">
+                        <option selected>Choose Location</option>
+                        <option value="Toronto">Toronto</option>
+                        <option value="Hotel Room">Victoria</option>
+                        <option value="Entire Place">Quebec City</option>
+                        <option value="Shared Room">Charlottetown</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-row">
+               <button class="btn btn-secondary">Submit</button>
+            </div>
+
+        </div><!--Left Column content ends-->
+        @if (objBnB == null)
+        {
+            <div class="spinner-border text-primary" role="status"></div>
+        }
+        else
+        {
+            <div class="right-column">
+                <!--Right Column content begins-->
+                <div class="card-deck">
+
+                    @foreach (var list in objBnB)
+                    {
+                        <div class="card-box col-md-4">
+                            <img class="card-img-top" src="/img/img-1.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <div class="row">
+                                    <h5 class="room-category">@list.Category</h5>
+                                    <!--Ratings-->
+                                    <div class="ratings">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                    </div>
+                                    <!--/Ratings-->
+                                </div>
+                                <h5 class="card-title">@list.Name</h5>
+                                <p class="card-text truncate">@list.Description</p>
+                            </div>
+                            <div class="card-footer">
+                                <div class="row">
+                                    <small class="room-price">$@list.Price</small>
+                                    <div class="heart-rate"><span class="glyphicon glyphicon-heart checked-heart"></span></div>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                </div>
+                <!--Right Column content ends-->
+            </div>
+        }
     </div>
 </div>
+
+@code {
+    IEnumerable<bnbProperties> objBnB;
+
+    protected override async Task OnInitializedAsync()
+    {
+        objBnB = await BnBService.GetProperties();
+    }
+
+}
